Modificacion en Readme y Grafico

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Lovers</title>
+    <title>Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat&family=Oswald:wght@300&family=Roboto+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:wght@600&family=Oswald:wght@300&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header class="banner-one" id="banner-one">
       <nav class="banner-one-content container">
-        <a href="index.html#filmsGhibli" class="nav-texts">Films</a>
+        <a href="index.html#filmsGhibli" class="nav-text">Films</a>
         <img src="./img/logo.png" alt="logo1" class="img-logo1" />
-        <a href="stadistics.html" class="nav-texts">Statistics</a>
+        <a href="stadistics.html" class="nav-text">Statistics</a>
       </nav>
     </header>
     <main class="banner-two" id="banner-two">
@@ -26,17 +25,17 @@
         <article class="buttons-model">
           <article class="buttons-design">
             <p class="text-buttons">Filter by :</p>
-           <select class="select-buttons" id="buttons-filter">
+            <select class="select-buttons" id="buttons-filter">
               <option value="">Director</option>
-            </select> 
+            </select>
           </article>
           <article class="buttons-design">
             <p class="text-buttons">Order by :</p>
-           <select class="select-buttons" id="buttons-order">
+            <select class="select-buttons" id="buttons-order">
               <option value="">Alphabet</option>
               <option value="a-z">A - Z</option>
               <option value="z-a">Z - A</option>
-            </select> 
+            </select>
           </article>
           <article class="buttons-design">
             <p class="text-buttons">Search by:</p>
@@ -63,7 +62,6 @@
       </article>
     </footer>
     <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js" type="module"></script>
   </body>
 </html>
