se agregó la funcion para ordenar

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,14 @@
               <option value="director">Director</option>
             </select>
           </div>
-          <div class="orden">Ordenar por: 
-            <select>
-              <option value="anio_up">Año</option>
-              <option value="name">Nombre</option>
+          <div>Ordenar por: 
+            <select class="seleccionar">
+              <option value="alfabeticamente">Alfabeticamente</option>
+              <option value="año">Año</option>
+              <option value="puntaje">Puntaje</option>
             </select>
           </div>
+          <div class="result"></div>
         </div>
       </header>
       <section>
