se imprime spawn

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <div id="menu">
       <button id="buttonHome">Home</button>
       <button id="buttonPokedex"> Pokedex</button>
+      <button id="buttonExtra"> Curiosidades</button>
     </div>
   
 <!--Seccion de home-->
@@ -84,6 +85,11 @@
     <div id = "pokemons">
     </div>
 
+  </section>
+
+  <section id="extraSecction">
+    <!--Lista de Spawn-->
+  <div id = "mostrarPokeSpawn"> </div>
   </section>
 
 </main>
