Pilk (functions order, filter) (#2)
* functions order a-z/z-a and filter by director

* functions orderByName,filterByDirector with css

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,23 @@
   <!--(futura Pantalla Inicio) Logo -->
   <header>
     <img src="logo_OTRO.png" class="logoinicio">
-    
+
+    <select class ="sortBy" id="selectionBy">
+      <option value="sort" selected>Sort by...</option>
+      <option value="title-az">Title From A to Z</option>
+      <option value="title-za">Title From Z to A</option>
+    </select>  
+
+    <select class ="filterBy" id="filteringBy">
+      <option value="Filter" selected>Filter by director</option>
+      <option value="Hayao Miyazaki">Hayao Miyazaki</option>
+      <option value="Isao Takahata">Isao Takahata</option>
+      <option value="Yoshifumi Kondō">Yoshifumi Kondō</option>
+      <option value="Hiroyuki Morita">Hiroyuki Morita</option>
+      <option value="Gorō Miyazaki">Gorō Miyazaki</option>
+      <option value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
+    </select>  
+
   </header>
 
   <!--Rederizado de posters en pantalla principal sprint 1-->
