Se terminó la funcion sortData y se consiguió la interacción con el usuario

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <input class="b-busqueda" type="text">
           </div>
           <div class="filtro">Seleccionar filtro: 
-            <select>
+            <select class="select-filter">
               <option value="pelicula">Pelicula</option>
               <option value="anio">Año</option>
               <option value="score">Score</option>
@@ -24,6 +24,7 @@
           </div>
           <div>Ordenar por: 
             <select class="seleccionar">
+              <option value="">--Elige una opcion--</option>
               <option value="alfabeticamente">Alfabeticamente</option>
               <option value="año">Año</option>
               <option value="puntaje">Puntaje</option>
