Add:filter by gender

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,3 @@
-HTML
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -51,10 +49,17 @@ HTML
       </div>
           
       <div class="group-select">
+        <select name="filter" class="select" id="select-gender">
+          <option disabled selected>-Choose-</option>
+          <option value="Female">Female</option>
+          <option value="Male">Male</option>
+          <option value="unknown">unknown</option>
+        </select>
      
       </div>
 
       <div class="group-select">
+
 
       </div>
 
