--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <figure>
-        <img> imagen de poke web
+        <img> 
       </figure>
     </header>
       <figure>
