Add: order by alphabet

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,11 @@
       </div>
 
       <div class="group-select">
-
-
+        <select name="order" class="select" id="select-order">
+          <option disabled selected>-Order-</option>
+          <option value="Ascending">Order A - Z</option>
+          <option value="Descending">Order Z - A</option>
+        </select>
       </div>
 
     </div>
