se continua modificando CSS en seccion extra

--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,16 @@
 
   </section>
 
-  <section id="extraSecction">
+  <section   id="extraSecction">
     <!--Lista de Spawn-->
+    <div class="contenedor-principal">
+      <div class="min-container">RANKING pokemons con la probabilidad de spawn más alta</div>  
+      <div class="max-container">RANKING pokemons con la probabilidad de spawn más baja</div>
+     
+    </div>
   <div id = "mostrarPokeSpawn"> </div>
+  <!--<button id="btnMax">Mayor Spawn</button>
+  <button id="btnMin">Menor Spawn</button>-->
   </section>
 
 </main>
