--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="line">
       <div class="imag0">
-        <img src="./Img/totoro1.png" alt="">
+       <!--<img src="./Img/totoro1.png" alt="">    --> 
       </div>
     </div>
     <div class="title">
@@ -35,3 +35,38 @@
 
 
      
+
+   
+
+
+
+
+
+
+  </main>
+
+  <div id="root"></div>
+  <div class="container0">
+
+  </div>
+
+
+
+
+
+
+
+
+  <script src="main.js" type="module"></script>
+  <div>
+  </div>
+
+  <!--<h1>hola que tal</h1>-->
+
+
+
+
+</body>
+
+
+</html>
