--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,14 +16,30 @@
             <input class="b-busqueda" type="text">
           </div>
           <div class="filtro">Seleccionar filtro: 
-            <select>
-              <option value="anio">Año</option>
-              <option value="score">Score</option>
-              <option value="director">Director</option>
+            <select class="selection-option">
+              <option value="all">Todos</option>
+              <option value="1986">1986</option>
+              <option value="1988">1988</option>
+              <option value="1989">1989</option>
+              <option value="1991">1991</option>
+              <option value="1992">1992</option>
+              <option value="1994">1994</option>
+              <option value="1995">1995</option>
+              <option value="1997">1997</option>
+              <option value="1999">1999</option>
+              <option value="2001">2001</option>
+              <option value="2002">2002</option>
+              <option value="2004">2004</option>
+              <option value="2006">2006</option>
+              <option value="2008">2008</option>
+              <option value="2010">2010</option>
+              <option value="2011">2011</option>
+              <option value="2013">2013</option>
+              <option value="2014">2014</option>
             </select>
           </div>
           <div class="orden">Ordenar por: 
-            <select>
+            <select class="seleccionar">
               <option value="anio_up">Año</option>
               <option value="name">Nombre</option>
             </select>
