--- a/src/index.html
+++ b/src/index.html
@@ -47,17 +47,17 @@
 
     <section id="filmografia" class="filmografia">
       <h2>FILMOGRAFÍA</h2>
-      <div id="peliculas">¨jajajajajajajamahaha</div>
       <div id="lista">
       <form>
         <select id="orden" name="tipo">
-        <option value="descendente"> A-Z </option>
-        <option value="ascendente"> Z-A </option>
+        <option id="descendente" value="desc"> A-Z </option>
+        <option id="ascendente" value="asc"> Z-A </option>
         </select>
       </form>
     </div>
 
       <p>Contenido de la sección Filmografía...</p>
+      <div id="peliculas"></div>
       <button id="volver2">VOLVER</button>
     </section>
 
