--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
           </div>
           <div class="filtro">Seleccionar filtro: 
             <select class="select-filter">
+              <optgroup label="Productores">
+              <option value="">--Elige una opcion--</option>  
+              <option value="Isao Takahata">Isao Takahata</option>
+              <option value="Hayao Miyazaki">Hayao Miyazaki</option>
+              <option value="Toru Hara">Toru Hara</option>
+              <option value="Toshio Suzuki">Toshio Suzuki</option>
+              <option value="Yoshiaki Nishimura">Yoshiaki Nishimura</option>    
+              </optgroup>
               <option value="pelicula">Pelicula</option>
               <option value="anio">Año</option>
               <option value="score">Score</option>
