--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
    <p> Este juego te invita a salir de casa e ir en la búsqueda de pokemons!!
     completa tu Pokedex y combate con otros jugadores en la liga de combates Go!</p>
 
-    <p>  Nosotras te ayudaremos mostrándote las características de cada pokemon de Kanto y Johto</p>
+    <p> Nosotras te ayudaremos mostrándote las características de cada pokemon de Kanto y Johto,
+       ademas pueden encontar un ranking con los pokemons con mayor y menor spawn</p>
   </div>
     <div id="oak">
     <img id ="oak" src="/extra/profesorOak.webp" /> 
@@ -90,8 +91,9 @@
   <section   id="extraSecction">
     <!--Lista de Spawn-->
     <div class="contenedor-principal">
-      <div class="min-container">RANKING pokemons con la probabilidad de spawn más alta</div>  
-      <div class="max-container">RANKING pokemons con la probabilidad de spawn más baja</div>
+      <div class="max-container">Ranking pokemons con mayor spawn, puedes encontrarlos facilmente en modo salveje</div>
+      <div class="min-container">Ranking pokemons con menor spawn, estos puedes encontrarlos en RAID o misiones especiales</div>  
+     
      
     </div>
   <div id = "mostrarPokeSpawn"> </div>
