Funcion filtrado por tipos y por generacion

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,13 @@
               <option value="Dark">Dark</option>
               <option value="Steel">Steel</option>
             </select>
-            <button id="btn-filter">Filter</button>
           </div>
-            
+          <div class="filtrar">
+            <select id="type-generation" name="type-generation" class="type-generation">
+              <option value="kanto">Kanto</option>
+              <option value="johto">Johto</option>
+            </select>
+          </div>
           <div class="box-pokedex" id="content-pokedexs">
 
           </div> 
