--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,8 @@
 
        <!-- Caja 2 -->
         <section data-content="content" id="pokedex"  >
-<<<<<<< HEAD
-          <div class="bucador"></div>
-          <div class="Cajon-pokedex" id="content-pokedexs"></div>
-        </section>
-
-    <div id="root"></div>
-=======
-          <div class="filter">
+          
+          <div class="list-filter">
             <select id="type-pokemon" name="type-pokemon" class="type-filter">
               <option value="Grass">Grass</option>
               <option value="Poison">Poison</option>
@@ -47,16 +41,11 @@
               <option value="Dark">Dark</option>
               <option value="Steel">Steel</option>
             </select>
-            <button id="btn-filter">Filter</button>
           </div>
-            
-          <div class="box-pokedex" id="content-pokedexs">
-
-          </div> 
+          <div class="box-pokedex" id="content-pokedexs"></div>
         </section>
 
         <div id="root"></div>
->>>>>>> c9262f56dadf8d67b51761953ad76beb32537337
     <script src="main.js" type="module"></script>
   </body>
 </html>
