--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
         <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli"></div>
         <div class="barra">
           <div class="buscar">
-            <div class="buscador">Buscar:</div>
-            <input class="b-busqueda" type="text">
+            <div class="buscador"></div>
+            <input class="b-busqueda" type="text" placeholder="Buscar">
           </div>
-          <div class="filtro">Seleccionar filtro: 
+          <div class="filtro"> 
             <select class="selection-option">
+              <option value="" disabled selected hidden>Seleccionar Filtro</option>
               <option value="todas">Todas</option> 
               <optgroup label="Productores"> 
               <option value="Isao Takahata">Isao Takahata</option>
@@ -47,10 +48,10 @@
             </optgroup>
             </select>
           </div>
-          <div>Ordenar por: 
+          <div> 
             <select class="seleccionar">
-              <option value="">--Elige una opcion--</option>
-              <option value="alfabeticamente">Alfabeticamente</option>
+              <option value="" disabled selected hidden>Ordenar Por</option>
+              <option value="alfabeticamente">A-Z</option>
               <option value="año">Año</option>
               <option value="puntaje">Puntaje</option>
             </select>
