--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <!--(futura Pantalla Inicio) Logo -->
+
   <header>
-    <img src="logo_OTRO.png" class="logoinicio">
+    <img src="main-logo.png" class="logoinicio">
 
     <select class ="sortBy" id="selectionBy">
       <option value="sort" selected>Sort by...</option>
@@ -30,14 +30,17 @@
       <option value="Gorō Miyazaki">Gorō Miyazaki</option>
       <option value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
     </select>  
+    
+    <div class="contenedorFunFact">
+      <button class="fun-fact" id="btnFunFact">Ghibli's Fun Fact<br>Click Me!</button>
+      <p id="procesar"></p>
+    </div>
 
   </header>
-
-  <!--Rederizado de posters en pantalla principal sprint 1-->
   
-<div id="animaciones" class="tarjetas"></div>
+  <div id="animaciones" class="tarjetas"></div>
 
-<script src="main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
