web responsive en proceso

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     completa tu Pokedex y combate con otros jugadores en la liga de combates Go!</p>
 
     <p> Nosotras te ayudaremos mostrándote las características de cada pokemon de Kanto y Johto,
-       ademas pueden encontar un ranking con los pokemons con mayor y menor spawn</p>
+       ademas en la seccion de curiosidades puedes encontrar el peso de algunos pokemons</p>
   </div>
     <div id="oak">
     <img  src="/extra/profesorOak.webp">
