--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200;300&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200;300&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <header>
-     <div class="line">
+    <div class="line">
       <div class="img1">
-         <img src="./img/img1.png" alt="">    
+        <img src="./img/img1.png" alt="">
       </div>
-    </div> 
-    <div class="title">
-      <span class="studios">STUDIOS </span>
-      <span>GIBLI </span>
     </div>
+  
+    <span class="studios">S T U D I O S </span>
+    <span class="ghibli">G H I B L I</span>
+  
+    
+  
   </header>
 
 
@@ -34,6 +38,11 @@
 
 
   </main>
+  <footer>
+
+
+
+  </footer>
 
   <div id="root"></div>
   <div class="container0">
@@ -48,6 +57,8 @@
 
 
   <script src="main.js" type="module"></script>
+  
+  
   <div>
   </div>
 
