--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <body>
     <main id="root">
       <header>
-        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli"></div>
+        <div class="logo"><img id="ghibli1" src="" alt=" "></div>
         <div class="barra">
           <div class="buscar">
-            <div class="buscador">Buscar:</div>
-            <input class="b-busqueda" type="text">
+            <input class="b-busqueda" type="text" placeholder="Buscar">
           </div>
-          <div class="filtro">Seleccionar filtro: 
+          <div class="filtro">
             <select class="selection-option">
+              <option value="" disabled selected hidden>Seleccionar Filtro</option> 
               <option value="todas">Todas</option> 
               <optgroup label="Productores"> 
               <option value="Isao Takahata">Isao Takahata</option>
@@ -47,10 +47,10 @@
             </optgroup>
             </select>
           </div>
-          <div>Ordenar por: 
+          <div class="filtro"> 
             <select class="seleccionar">
-              <option value="">--Elige una opcion--</option>
-              <option value="alfabeticamente">Alfabeticamente</option>
+              <option value="" disabled selected hidden>Ordenar Por</option> 
+              <option value="alfabeticamente">A-Z</option>
               <option value="año">Año</option>
               <option value="puntaje">Puntaje</option>
             </select>
@@ -58,7 +58,6 @@
         </div>
       </header>
       <section>
-
       </section>
 
       
