readme carga imagen

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
        ademas en la seccion de curiosidades puedes encontrar el peso de algunos pokemons</p>
   </div>
     <div id="oak">
-    <img  src="/extra/profesorOak.webp">
+    <img  src="./extra/profesorOak.webp">
   </div>
 </div>
 
