Filtro Y ordenado completo

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,9 @@
               <option selected value="1">Order</option>
               <option value="Ascending">Ascending</option>
               <option value="Descending">Descending</option>
+              <option value="Major-Minor">Major-Minor</option>
+              <option value="Minor-Major">Minor-Major</option>
+
             </select>
             
           </div>
