Se corrigieron problemas de diseño y se dió diseño a la segunda pagina

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <body>
     <main id="root">
       <header>
-        <div class="logo"><img id="ghibli1" src="" alt=" "></div>
+          <picture class="logo">
+            <source class="l-ghibli" srcset="img/logoghibli.png" media="(max-width: 480px)">
+            <img src="img/ghibli1.png" alt="Logo Ghibli">
+           </picture>
         <div class="barra">
           <div class="buscar">
             <input class="b-busqueda" type="text" placeholder="Buscar">
@@ -59,20 +62,11 @@
       </header>
       <section>
       </section>
-
-      
-
-<!--       <footer class="footer"></footer> -->
     </main>
-
-    	<!-- Borde azul 
-        Borde blanco
-        Borce celeste
-      -->
-	<div id="left"></div>
-	<div id="right"></div>
-	<div id="bottom"></div>
-  <div id="top"></div>
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="bottom"></div>
+    <div id="top"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
