--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,17 @@
   <body>
     <main id="root">
       <header>
-        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli"></div>
+        <picture class="logo">
+          <source srcset="img/logoghibli.png" media="(max-width: 480px)" />
+          <img src="img/ghibli1.png" alt="Logo Ghibli" />
+        </picture>
         <div class="barra">
           <div class="buscar">
-            <div class="buscador"></div>
             <input class="b-busqueda" type="text" placeholder="Buscar">
           </div>
-          <div class="filtro"> 
+          <div class="filtro">
             <select class="selection-option">
-              <option value="" disabled selected hidden>Seleccionar Filtro</option>
+              <option value="" disabled selected hidden>Seleccionar Filtro</option> 
               <option value="todas">Todas</option> 
               <optgroup label="Productores"> 
               <option value="Isao Takahata">Isao Takahata</option>
@@ -48,9 +50,9 @@
             </optgroup>
             </select>
           </div>
-          <div> 
+          <div class="filtro"> 
             <select class="seleccionar">
-              <option value="" disabled selected hidden>Ordenar Por</option>
+              <option value="" disabled selected hidden>Ordenar Por</option> 
               <option value="alfabeticamente">A-Z</option>
               <option value="año">Año</option>
               <option value="puntaje">Puntaje</option>
@@ -59,9 +61,9 @@
         </div>
       </header>
       <section>
-
       </section>
 
+      
 
 <!--       <footer class="footer"></footer> -->
     </main>
