Se adiciono botones de orden y seccion dos carti- lla de la seccion dos.

--- a/src/index.html
+++ b/src/index.html
@@ -19,35 +19,14 @@
       <section id="Encabezado"> 
         <div class="buscar" id="input-buscar">
         <label for="name"> Busqueda </label>
-        <input type="text" id="inputBuscar" placeholder="nombre">
-         <button>Buscar</button>
+        <input type="text" id="inputBuscar" maxlength="15" placeholder="nombre">
         </div>
-
-         <label for="region">Region</label>
-         <select name="region" id="Region">
-            <option value=""></option>
-            <option value="reg-uno">Johto</option>
-            <option value="reg-dos">Canto</option>
-            </select> 
-
-        <label for="tipo">Tipo</label>
-        <select name="tipo" id="Tipo">
-             <option value=""></option>
-             <option value="tipo uno">Agua</option>
-             <option value="tipo dos">Fuego</option>
-             <option value="tipo tres">Tierra</option>
-             <option value="tipo cuatro">Veneno</option>
-             <option value="tipo cinco">Electrico</option>
-             <option value="tipo seis">Aire</option>
-        </select> 
         
         <label for="orden">Orden</label>
         <select name="orden" id="orden">
               <option value=""></option>
-              <option value="az">Agua</option>
-              <option value="za">Fuego</option>
-             <option value="menosp">Mayor a Menor Poder</option>
-              <option value="masp">Menor a Mayor poder</option>
+             <option value="ascendente">A - Z</option>
+              <option value="descendente">Z - A</option>
         </select>
       </section>
       <section id="seccionUno">
@@ -60,7 +39,7 @@
   <script src="main.js" type="module"></script>
 
 <footer>
-  <span>Proyecto creado por Maria & Brina</span>
+  <span>Proyecto creado por Maria Y Brina</span>
 </footer>
  </body>
 </html>
