--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -11,11 +11,23 @@
         <h1>Poke-web</h1> 
     </header>
     <section id ="seccionDos">
+      <article id="artSeccionDos">
+        <h3 id="tituloSeccionDos"></h3>
+        <p id="parrafoSeccionDos"></p>
+        <figure id="figuSeccionDos">
+        <img id="imagenSeccionDos">  
+        </figure>
+        <div>  Tamano: <span  id="tamañoDelPokemonUno"></span> </div>
+        <div > Peso: <span id="tamañoDelPokemonDos"> </span> </div>
+        <div > Resistencia: <span id="resistenciaDelPokemon"> </span> </div>
+        <div > Tipo: <span id="tipoDePokemon"></span> </div>
+        <div > Devilidades: <span id="devilidadesDelPokemon"></span> </div>
+      </article>
     </section>  
     <script src="mainPokemon.js" type="module"></script>
 
 <footer>
-  <span>Proyecto creado por Maria & Brina</span>
+  <span>Proyecto creado por Maria Y Brina</span>
 </footer>
 
  </body>
