final fix in readme

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <div class="group-select">
         <label class="label" for="">Order by</label>
         <select name="order" class="select" id="select-order">
-          <option disabled selected>-ORDER-</option>
+          <option disabled selected>-ALPHABET-</option>
           <option value="Ascending">Ascending</option>
           <option value="Descending">Descending</option>
         </select>
