Se agrego la funcion de busqueda para los titulos de las peliculas

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
            </picture>
         <div class="barra">
           <div class="buscar">
-            <input class="b-busqueda" type="text" placeholder="Buscar">
+            <input class="b-busqueda" type="search" placeholder="Buscar título">
           </div>
           <div class="filtro">
             <select class="selection-option">
