--- a/src/index.html
+++ b/src/index.html
@@ -20,51 +20,67 @@
           </ul>
         </nav>
       </header>
-  
-       <!-- Caja 2 -->
-        <section id="pokedex" >
-          <div class="filter">  
-            <label>Filter by:</label>
 
-            <select id="type-pokemon" name="type-pokemon" class="type-pokemon">
-              <option selected value="Type">Type</option>
-              <option value="bug">Bug</option>
-              <option value="dark">Dark</option>
-              <option value="dragon">Dragon</option>
-              <option value="electric">Electric</option>
-              <option value="fairy">Fairy</option>
-              <option value="fighting">Fighting</option>
-              <option value="fire">Fire</option>
-              <option value="flying">Flying</option>
-              <option value="ghost">Ghost</option>
-              <option value="grass">Grass</option>
-              <option value="ground">Ground</option>
-              <option value="ice">Ice</option>
-              <option value="normal">Normal</option>
-              <option value="poison">Poison</option>
-              <option value="psychic">Psychic</option>
-              <option value="rock">Rock</option>
-              <option value="steel">Steel</option>
-              <option value="water">Water</option>
-            </select>
+      <!--main menu box one-->
+      <main>
+        <div class="filter"> 
+          <label>Filter by:</label>
+          <select id="type-pokemon" name="type-pokemon" class="type-pokemon">
+            <option selected value="Type">Type</option>
+            <option value="bug">Bug</option>
+            <option value="dark">Dark</option>
+            <option value="dragon">Dragon</option>
+            <option value="electric">Electric</option>
+            <option value="fairy">Fairy</option>
+            <option value="fighting">Fighting</option>
+            <option value="fire">Fire</option>
+            <option value="flying">Flying</option>
+            <option value="ghost">Ghost</option>
+            <option value="grass">Grass</option>
+            <option value="ground">Ground</option>
+            <option value="ice">Ice</option>
+            <option value="normal">Normal</option>
+            <option value="poison">Poison</option>
+            <option value="psychic">Psychic</option>
+            <option value="rock">Rock</option>
+            <option value="steel">Steel</option>
+            <option value="water">Water</option>
+          </select>
+          <select id="type-generation" name="type-generation" class="type-generation">
+            <option selected value="Gen">Generation</option>
+            <option value="kanto">Kanto</option>
+            <option value="johto">Johto</option>
+          </select>
+          <select id="type-order"> <!--order filtering-->
+            <option selected value="1">Order</option>
+            <option value="Ascending">Ascending</option>
+            <option value="Descending">Descending</option>
+            <option value="Major-Minor">Major-Minor</option>
+            <option value="Minor-Major">Minor-Major</option>
+          </select>
+        </div>
+        <div class="box-pokedex" id="content-pokedexs"></div> <!--pokemon box-->
+      </main>
+
+
+       <!-- percentage box number two-->
+        <section >
+          <table border="1" >
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Pokemon</th>
+                <th>tipo</th>
+                <th>ataque</th>
+                <th>defensa</th>
+                <th>resistencia</th>
+                <th>puntos de comabte</th>
+                <th>puntos de salud</th>
+               </tr>
+            </thead>
+            <tbody id="pokedex-stats"></tbody>
+            <!--  -->
             
-            <select id="type-generation" name="type-generation" class="type-generation">
-              <option selected value="Gen">Generation</option>
-              <option value="kanto">Kanto</option>
-              <option value="johto">Johto</option>
-            </select>
-
-            <select id="type-order">
-              <option selected value="1">Order</option>
-              <option value="Ascending">Ascending</option>
-              <option value="Descending">Descending</option>
-              <option value="Major-Minor">Major-Minor</option>
-              <option value="Minor-Major">Minor-Major</option>
-
-            </select>
-            
-          </div>
-          <div class="box-pokedex" id="content-pokedexs"></div>
         </section>
 
         <div id="root"></div>
