Arreglo de nombres de funcion(calculo)

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
         <nav>
          <ul class="nav-list">
             <li data-target="#filters">Home</li>
-            <li data-target="#stats">Article</li>
-            <li data-target="#news">Setting</li>
+            <li data-target="#stats">Stats Pokemon</li>
+            <li data-target="#news">Notice</li>
           </ul>
         </nav> 
       </header>
@@ -73,12 +73,14 @@
               <tr>
                 <th>#</th>
                 <th>Pokemon</th>
-                <th>tipo</th>
-                <th>ataque</th>
-                <th>defensa</th>
-                <th>resistencia</th>
-                <th>puntos de comabte</th>
-                <th>puntos de salud</th>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Base Attack</th>
+                <th>Base Defense</th>
+                <th>Base Stamina</th>
+                <th>Max-CP</th>
+                <th>Max-HP</th>
+                <th>Encounter Percentage</th>
                </tr>
             </thead>
             <tbody id="pokedex-stats"></tbody>
