CSS tabla de estadisticas

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,10 @@
       
       <!-- percentage box number two-->
       <section data-content="content" id="stats">
-          <table border="1" >
+          <table border="1" id="main-table" >
             <thead>
+            <th colspan="10">POKEMON STATS</th>
+            <br>
               <tr>
                 <th>#</th>
                 <th>Pokemon</th>
