cambios en la funcion calcular

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
               <option value="puntaje">Puntaje</option>
             </select>
           </div>
-          
+          <button name="button" class="button-personAS" id="jaja">Calcular</button>
         </div>
       </header>
       <section>
