Solucion de error responsive

--- a/src/index.html
+++ b/src/index.html
@@ -79,14 +79,14 @@
       </main>
       
       <!-- percentage box number two-->
-      <section data-content="content" id="stats">
-          <table border="1" >
+      <section data-content="content" id="stats" class="stats-contain">
+          <table border="1" class="main-table" >
             <thead>
+              <th colspan="9" class="title-table">Pokemon Stats</th>
               <tr>
                 <th>#</th>
                 <th>Pokemon</th>
                 <th>Name</th>
-                <th>Type</th>
                 <th>Base Attack</th>
                 <th>Base Defense</th>
                 <th>Base Stamina</th>
