--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
           <select id="selectProducer" class="select">
           <option value="seleccionar">PRODUCER</option>
           <option value="all" id="filterProducer">All</option>
-          <option value="Isao Takahata" id="filterProducer">Isao Takahata</option>
-          <option value="Hayao Miyazaki" id="filterProducer">Hayao Miyazaki</option>
-          <option value="Toru Hara" id="filterProducer">Toru Hara</option>
-          <option value="Toshio Suzuki" id="filterProducer">Toshio Suzuki</option>
-          <option value="Yoshiaki Nishimura" id="filterProducer">Yoshiaki Nishimura</option>
+          <option value="Isao Takahata" class="filterProducer">Isao Takahata</option>
+          <option value="Hayao Miyazaki" class="filterProducer">Hayao Miyazaki</option>
+          <option value="Toru Hara" class="filterProducer">Toru Hara</option>
+          <option value="Toshio Suzuki" class="filterProducer">Toshio Suzuki</option>
+          <option value="Yoshiaki Nishimura" class="filterProducer">Yoshiaki Nishimura</option>
         </select>
 
         
@@ -51,7 +51,7 @@
         </select>
       </ul>
  
-     
+    </div>
   </nav>
 
   <main>
