Completado de la tabla responsive

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
             </div>
           </div> -->
           <div class="filter">
-            <div>
-              <label>Filter by:</label>
+            <div class="filter__01">
+              <label class="filter-label-1">Filter by:</label>
               <select id="type-pokemon" name="type-pokemon" class="type-pokemon">
                 <option selected value="Type">Type</option>
                 <option value="bug">Bug</option>
@@ -65,7 +65,7 @@
                 <option value="johto">Johto</option>
               </select>
             </div>
-            <select id="type-order"> <!--order filtering-->
+            <select id="type-order" class="filter__02"> <!--order filtering-->
               <option selected value="1">Order</option>
               <option value="Ascending">Ascending</option>
               <option value="Descending">Descending</option>
@@ -112,9 +112,9 @@
           <p>Project collaborators: Diana Fiorella Diaz Mayta and Angie Lorena Mora Rosas </p>
         </div>
         <div class="icon-info">
-          <ion-icon name="logo-github"></ion-icon>
-          <ion-icon name="logo-figma"></ion-icon>
-          <ion-icon name="logo-linkedin"></ion-icon>
+         <a href=""><ion-icon name="logo-github"></ion-icon></a>
+         <a href=""><ion-icon name="logo-figma"></ion-icon></a>
+         <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
         </div>
       </footer>
 
