--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
           <option value="Z-A" class="alphabetical">Z-A</option>
           
         </select>
+        <button type="button" id="btnTop">Movies Top 10</button>
       </ul>
  
     </div> 
