se trabajo en los test unitarios de filtro y orden se avanso css de la seccion uno de nuestra web

--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -11,7 +11,7 @@
         <h1>Poke-web</h1> 
     </header>
     <section id ="seccionDos">
-      <article id="artSeccionDos">
+      <article id="artSeccionDos" class="artPokemon">
         <h3 id="tituloSeccionDos"></h3>
         <p id="parrafoSeccionDos"></p>
         <figure id="figuSeccionDos">
@@ -21,7 +21,7 @@
         <div > Peso: <span id="tamañoDelPokemonDos"> </span> </div>
         <div > Resistencia: <span id="resistenciaDelPokemon"> </span> </div>
         <div > Tipo: <span id="tipoDePokemon"></span> </div>
-        <div > Devilidades: <span id="devilidadesDelPokemon"></span> </div>
+        <div > Debilidades: <span id="devilidadesDelPokemon"></span> </div>
       </article>
     </section>  
     <script src="mainPokemon.js" type="module"></script>
