--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
           
         </select>
         <button type="button" id="btnTop">Movies Top 10</button>
+        <button type="button" id="btnCurious">CURIOUS FACTS</button>
       </ul>
  
     </div> 
@@ -63,12 +64,12 @@
 
   </main>
   <footer>
-
-   <h1>adios</h1>
-
-   <h3>tubooooo</h3>
-
-
+  <img id="imgFooter" src="pngwing.com.png" alt="img footer">
+  <ul class="Names">
+    <li class="created">CreatedBy</li>
+    <li id="nameCM">Caro Raquel & Mariana Magallanes</li>
+  
+  </ul>
 
   </footer>
 
@@ -76,7 +77,6 @@
   <div class="container0">
 
   </div>
-
 
 
 
