--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200;300&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -26,9 +27,9 @@
 
     </div>-->
     <div class="titleHeader">
-      <img class="imgd" src="./img/imgd.png" alt="">
-      <img class="img0" src="./img/img0.png" alt="">
-      <img class="imgd-1" src="./img/imgd.png" alt="">
+      <img class="imgd totoro" src="./img/imgd.png" alt="">
+      <img class="img0 " src="./img/img0.png" alt="">
+      <img class="imgd-1 totoro" src="./img/imgd.png" alt="">
     </div>
 
 
@@ -37,26 +38,38 @@
   <nav>
     <div class="menu">
       <ul>
-        <select class="btnMenu" id="selectProducer" class="select">
-          <option value="seleccionar">PRODUCER</option>
-          <option value="all" class="filterProducer">All</option>
-          <option value="Isao Takahata" class="filterProducer">Isao Takahata</option>
-          <option value="Hayao Miyazaki" class="filterProducer">Hayao Miyazaki</option>
-          <option value="Toru Hara" class="filterProducer">Toru Hara</option>
-          <option value="Toshio Suzuki" class="filterProducer">Toshio Suzuki</option>
-          <option value="Yoshiaki Nishimura" class="filterProducer">Yoshiaki Nishimura</option>
-        </select>
+        <div class="titleOption">
+          <label for="">Filter By Producer</label>
+          <select class="btnMenu" id="selectProducer">
+            <option disabled selected>Producer</option>
+            <option value="all" class="filterProducer">All</option>
+            <option value="Isao Takahata" class="filterProducer">Isao Takahata</option>
+            <option value="Hayao Miyazaki" class="filterProducer">Hayao Miyazaki</option>
+            <option value="Toru Hara" class="filterProducer">Toru Hara</option>
+            <option value="Toshio Suzuki" class="filterProducer">Toshio Suzuki</option>
+            <option value="Yoshiaki Nishimura" class="filterProducer">Yoshiaki Nishimura</option>
+          </select>
+        </div>
 
+        <div class="titleOption">
+          <label for="">Alphabetical Order</label>
+          <select class="btnMenu select" id="alphabeticalOrder">
+            <option value="A-Z" class="alphabetical">Ascendente</option>
+            <option value="Z-A" class="alphabetical">Descendente</option>
 
-        <select class="btnMenu" id="alphabeticalOrder" class="select">
-          <option value="alphabetical_order" id="1">ALPHABETICAL ORDER</option>
-          <option value="A-Z" class="alphabetical">A-Z</option>
-          <option value="Z-A" class="alphabetical">Z-A</option>
-
-        </select>
-        <button class="btnMenu" type="button" id="btnTop">MOVIES TO 10</button>
-        <button class="btnMenu" type="button" id="btnCurious">CURIOUS FACTS</button>
+          </select>
+        </div>
+        <div class="titleOption">
+          <label for=""> </label>
+          <button class="btnMenu btn" type="button" id="btnTop">Movies Top 10</button>
+        </div>
+        <div class="titleOption">
+          <label for=""> </label>
+          <button class="btnMenu btn" type="button" id="btnCurious">Curious Facts</button>
+        </div>
       </ul>
+
+
 
     </div>
   </nav>
@@ -65,14 +78,12 @@
 
     <div id="insertPoster"></div>
 
-
-
   </main>
   <footer>
     <img id="imgFooter" src="./img/imgFooter.png" alt="img footer">
     <ul class="Names">
-      <li class="created">CreatedBy</li>
-      <li id="nameCM">Caro Raquel & Mariana Magallanes</li>
+      <li class="created  nameFooter">CreatedBy</li>
+      <li id="nameCM" class="nameFooter">Caro Raquel and Mariana Magallanes</li>
 
     </ul>
 
