--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html> 
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Poke web (Data Lover)</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <figure>
-        <a href="https://fonttmeme.com/es/fuente-pokemon/">
-        <img id="pokeweb" src="https://fontmeme.com/permalink/230321/687d67403dbb62892116f1b85225b722.png"
-         alt="fuente-pokemon" borde="0">
-         </a>
+        <img id="pokeweb" src="https://fontmeme.com/permalink/230321/687d67403dbb62892116f1b85225b722.png" 
+        alt="Imagen de la palabra pokeweb">
         </figure>
         
       <section id="encabezado"> 
         <div class="buscar" id="input-buscar">
-        <label for="name"> Busqueda </label>
+        <label for="name"> </label>
         <input type="text" id="inputBuscar" maxlength="15" placeholder="nombre">
         </div>
         
-        <label id="ordenado" for="orden">Orden</label>
+        <label id="ordenado" for="orden">Order</label>
         <select name="orden" id="orden">
               <option value=""></option>
              <option value="ascendente">A - Z</option>
@@ -35,7 +34,7 @@
         <table>
           <tr>
             <th>Region</th>
-            <th>Procentaje%</th>
+            <th>Procentage%</th>
           </tr>
           <tr>
             <td>kanto</td>
